--- a/kalmac/src/component/Styles/Navbar.css
+++ b/kalmac/src/component/Styles/Navbar.css
@@ -67,10 +67,17 @@
   background: white;
   /* box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); */
 }
+.right-parent-Div{
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+}
 .contactNo {
-  margin-left: 220px;
+  margin-top: -10px;
   display: flex;
   align-items: center;
+  color:#588DCF;
 }
 .logo {
   font-size: 20px;
@@ -94,4 +101,5 @@
   border: none;
   cursor: pointer;
   border-radius: 5px;
+  margin-top: -10px;
 }
