--- a/kalmac/src/component/Styles/PageSix.css
+++ b/kalmac/src/component/Styles/PageSix.css
@@ -40,7 +40,7 @@
 }
 .img-para {
   display: flex;
-  border: 1px solid black;
+  /* border: 1px solid black; */
 }
 .img-para img {
   margin-right: 8px;
