--- a/kalmac/src/component/Styles/PageFive.css
+++ b/kalmac/src/component/Styles/PageFive.css
@@ -27,13 +27,14 @@
 
 .reason-card {
   background: #f5f5f5;
-  padding: 20px;
+  padding: 15px;
   border-radius: 10px;
   text-align: justify;
   display: flex;
-  height: 230px;
+  height: 280px;
   flex-direction: column;
   align-items: start;
+  justify-content: center;
   /* border: 1px solid black; */
 }
 .reason-card:nth-child(1) {
