--- a/kalmac/src/component/Styles/PageFour.css
+++ b/kalmac/src/component/Styles/PageFour.css
@@ -49,7 +49,7 @@
     font-family: "DM Sans";
     width: 206vh;
     height: 20vh;
-    /* margin-top: 20px; */
+    margin-left: -2px;
     font-weight: 600;
     font-size: 18px;
     line-height: 30px;
