--- a/kalmac/src/component/Styles/PageSeven.css
+++ b/kalmac/src/component/Styles/PageSeven.css
@@ -52,6 +52,7 @@
   background: #ebf1f8;
   padding: 8px;
   margin-bottom: 15px;
+  text-align: center;
 }
 .fName {
   width: 389px;
@@ -67,6 +68,7 @@
   margin-bottom: 12px;
   border-radius: 5px;
   border: none;
+  text-align: center;
   background: #ebf1f8;
 }
 .submit-btn {
