--- a/kalmac/src/component/Styles/PageTwo.css
+++ b/kalmac/src/component/Styles/PageTwo.css
@@ -23,7 +23,7 @@
 .text-content {
   position: relative;
   z-index: 2;
-  width: 50%;
+  width: 59%;
   background: rgba(255, 255, 255, 0.8);
   padding: 20px;
   border-radius: 8px;
@@ -31,6 +31,15 @@
 
 .lists {
   list-style: none;
+}
+.lists li{
+  display: flex;
+  margin: 8px 0 5px 8px;
+  align-items: center;
+}
+.lists img{
+  padding: 10px;
+
 }
 .trainging-card-section {
   display: flex;
